@startuml

class Person {
    - idNumber: int
    - name: String
    - age: int
    - job: String
    - listIdNumber: static set<int>
    --
    + void inputInfoPerson()
    + void displayInfoPerson()
}

class Household {
    - numMember: int
    - address: String
    - listPersons: vector<Person>
    --
    + void inputInfoHousehold()
    + void displayInfoHousehold()
}

class Neighborhood {
    - listHouseholds: vector<Household>
    --
    + void addHousehold()
    + void displayNeighborhood()
}

Household *--> Person
Neighborhood *--> Household

@enduml
